--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 coroutines-play-services = "1.7.3"
 lottie = "6.0.0"
+accompanist-pager = "0.28.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
